--- a/main.html
+++ b/main.html
@@ -9,8 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
-
+<div>
+	<h3>What is capital of India?</h3>
+	<form action="">
+		<input type="radio">
+		<label for="State">New Delhi</label><br>
+		<input type="radio">
+		<label for="State">Mumbai</label>
+	</form>
+	<blockquote class="text">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+</div>
 </body>
 
 </html>
