--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="radio">
 		<label for="State">Mumbai</label>
 	</form>
-	<blockquote class="text">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" class="text">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 </div>
 </body>
 
